<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.PeekABoo.bourne.peekaboo.SignUpActivity"
    style="@style/AuthBackground">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/Title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="63dp"
        android:textSize="60sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"/>

    <LinearLayout
        android:id="@+id/signupContainerBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/Title">
        <EditText
            android:id="@+id/userNameFieldSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="@string/username_hint" >

            <requestFocus />
        </EditText>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordFieldSignUp"
            android:layout_below="@+id/userNameFieldSignUp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="@string/passwordField" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailField"
            android:layout_below="@+id/passwordFieldSignUp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="@string/emailHint" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/signupContainerBox">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/signUp_button"
            android:id="@+id/signUpButton"
            android:background="?android:attr/selectableItemBackground"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="6dip"
            android:layout_marginBottom="6dip"
            android:background="?android:attr/dividerHorizontal"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/cancelSignUp_button"
            android:id="@+id/signUpCancelButton"
            android:background="?android:attr/selectableItemBackground"/>

        </LinearLayout>


</RelativeLayout>
